# miniex.blog

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  bun.lockb  docker-compose.yml  flake.nix  package.json  tailwind.config.mjs
assets/: indexnow-key.txt  robots.txt
assets/favicon/: readme.txt
assets/js/: app.js  code-highlight.js  graph-render.js  guestbook.js  post-toc.js  post.js  resume-print.js  resume-toc.js  search.js  visitor.js
assets/styles/: animations.css  base.css  charts.css  code.css  global.css  hero.css  katex.css  print.css  tailwind.input.css  tailwind.output.css
contents/: resume-update
contents/blog/: homeserver-0.mdx  homeserver-1.mdx  homserver-0.mdx  ml-s-ljh-1.mdx  ml-s-ljh-2.mdx  ml-s-ljh-3.mdx  qm-intro-000.ko.mdx  qm-intro-001.ko.mdx  qm-intro-002.ko.mdx  qm-intro-003.ko.mdx  rus-0-constraints.mdx  rust-0-constraints.mdx  rust-1-trait.mdx  test.mdx
contents/diary/: 2025.03.30.mdx
js/: resume-toc.js
scripts/: build.sh  deploy.sh  dev.sh
src/: db.rs  error.rs  filters.rs  handlers.rs  i18n.rs  lib.rs  main.rs  post.rs  router.rs  templates.rs
src/handlers/: api.rs  feed.rs  pages.rs
src/post/: de.rs
templates/: _base.html  _components.html  blog.html  diary.html  error.html  guestbook.html  index.html  post.html  resume.html  review.html  series.html  series_detail.html
tools/: format.sh  lint.sh
