[package]
name = "blog"
version = "0.1.0-dev"
edition = "2021"
categories = []
description = ""
exclude = []
homepage = "https://gitlab.daminstudio.com/miniex/miniex.blog"
keywords = []
license = "MIT OR Apache-2.0"
repository = "https://gitlab.daminstudio.com/miniex/miniex.blog"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "=0.7.5", features = ["macros", "ws"] }
askama = { version = "=0.12.1", features = ["with-axum"] }
askama_axum = "=0.4.0"
tower-http = { version = "=0.5.2", features = ["fs", "trace"] }
tower-livereload = "=0.9.3"

gray_matter = "=0.2.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1.1"

anyhow = "1.0"
async-recursion = "1.0"
