[package]
name = "blog"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
exclude = []
homepage = "https://gitlab.daminstudio.com/miniex/miniex.blog"
keywords = []
license = "MIT OR Apache-2.0"
repository = "https://gitlab.daminstudio.com/miniex/miniex.blog"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "=0.7.5", features = ["macros", "ws"] }
askama = { version = "=0.12.1", features = ["with-axum"] }
askama_axum = "=0.4.0"
tower-http = { version = "=0.5.2", features = ["fs", "trace", "compression-gzip", "compression-br", "set-header"] }
tower-livereload = "=0.9.3"

slug = "=0.1.6"

gray_matter = "=0.2.8"
pulldown-cmark = "=0.12.0"

chrono = { version = "=0.4.38", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1.1"

anyhow = "1.0"
async-recursion = "1.0"
async-trait = "0.1"

# SQLite dependencies
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.17.0", features = ["v4"] }
